# phonetic

./: Cargo.toml  README.md
src/: distance.rs  essai.rs  lib.rs  search.rs
src/phonetics/: mod.rs  phonex.rs  soundex.rs
src/phonetics/metaphone/: metaphone.rs
